# novos

./: .gitignore  .gitmodules  Cargo.toml  KIDI.md  Makefile.toml  README.MD  build.rs  limine.cfg  limine.conf  rust-toolchain.toml  tt.out
.cargo/: config.toml
boot_cfg/: main.conf  main_debug.conf  test.conf
cake/: Cargo.toml
cake/src/: fuse.rs  lib.rs  limine_request.rs  module.rs  once_mutex.rs  oncemut.rs  oncerw.rs  owned.rs  resource.rs
gdb_scripts/: break_on_panic.gdb
kalloc/: Cargo.toml
kalloc/src/: alloc_wrap.rs  alog.rs  lib.rs  locked_vec.rs  log.rs  mut_alloc.rs
kalloc/src/block_alloc/: alloc_tests.rs  allocator.rs  block.rs  block_alloc.md  mod.rs
kbuild/: Cargo.toml
kbuild/src/: config.rs  iso.rs  lib.rs  limine.rs
kelp/: Cargo.toml
kelp/src/: lib.rs  phdr.rs  reloc.rs  sections.rs  strings.rs  sym.rs
kernel/: Cargo.toml  build.rs  link.ld
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  interpreter.rs  lib.rs  main.rs  requests.rs  serial.rs
kernel/src/acpi/: mapped_table.rs  mod.rs  phys_table.rs  rsdp.rs  rsdt.rs  sdt.rs
kernel/src/context/: contexts.rs  int_context.rs  mod.rs
kernel/src/ctx/: contexts.rs  int_context.rs  int_ctx.rs  mod.rs
kernel/src/display/: color.rs  framebuffer.rs  mod.rs  req_data.rs  screen_char.rs  terminal.rs
kernel/src/display/character/: font8x8.rs  mod.rs
kernel/src/elf/: mod.rs  req_data.rs
kernel/src/gdt/: local.rs  mod.rs
kernel/src/interrupts/: exception.rs  local.rs  lock.rs  macros.rs  mod.rs
kernel/src/interrupts/hardware/: keyboard.rs  mod.rs  timer.rs
kernel/src/memory/: allocator.rs  elf_req_data.rs  mod.rs  req_data.rs  stack.rs
kernel/src/memory/allocator/: alloc.rs  allocation-old.md  allocator-design-new.md  block.rs  block_alloc.rs  blocks.rs  blocksize.rs  blocktype.rs  downwards_vec.rs  locked_vec.rs  log.rs  mod.rs
kernel/src/memory/paging/: addr_space.rs  builder.rs  debug.rs  dymap.md  kernel.rs  mod.rs  page_table.rs  page_tree.rs  phys.rs
kernel/src/memory/paging/phys/: mapper.rs  mod.rs  phys_mem.rs
kernel/src/memory/paging/vaddr_mapper/: mod.rs  range.rs  virt_alloc.rs
kernel/src/memory/paging/virt/: alloc.rs  mod.rs  range.rs  virt.rs.old  virt_alloc.rs
kernel/src/mp/: core_local.rs  ipi.rs  lapic.rs  mod.rs  req_data.rs  trampoline.rs
kernel/src/mp/ioapic/: mod.rs  redirection.rs  version.rs
kernel/src/mp/lapic/: icr.rs  lvt.rs  mod.rs  svr.rs  timer.rs  version.rs
kernel/src/mp/lapic/lvt/: mod.rs  timer.rs
kernel/src/mp/mp_setup/: context.rs  mod.rs  trampoline.rs
kernel/src/output/: buf.rs  mod.rs
kernel/src/panic/: elf.rs  mod.rs  stacktrace.rs
kernel/src/pci/: class.rs  device.rs  mod.rs  pcibin.md  vendor_device.rs
kernel/src/proc/: mod.rs  sched.rs
kernel/src/serial/: aux.rs  harness.rs  interface.rs  mod.rs  raw.rs
kernel/src/serial/interface/: commands.rs  mod.rs  serial.rs
kernel/src/testing/: mod.rs  qemu_exit.rs  test_fn.rs
kernel/src/util/: int_block.rs  limine_request.rs  mod.rs  module.rs  oncemut.rs  owned.rs
kproc/: Cargo.toml
kproc/src/: lib.rs  log_filter.rs  test.rs
kproc/src/pci/: mod.rs  pci_id_parse.rs
krun/: Cargo.toml
krun/src/: cfg.rs  env.rs  gdb.rs  lib.rs  packet.rs  qemu_cfg.rs  qemu_ctl.rs
krun/src/gdb/: cfg.rs  instance.rs  invocation.rs  mod.rs
krun/src/qemu/: chardev.rs  controller.rs  debug.rs  mod.rs
krun/src/qemu/packet/: joint.rs  mod.rs
kserial/: Cargo.toml
kserial/kserial_derive/: Cargo.toml
kserial/kserial_derive/src/: lib.rs
kserial/src/: lib.rs  spec-kinda.md
kserial/src/client/: cfg.rs  mod.rs  serial.rs  serial_adapter.rs
kserial/src/client/fs/: err.rs  mod.rs
kserial/src/common/: array_vec.rs  commands.rs  fixed_null_str.rs  macros.rs  mod.rs  packet.rs  validate.rs
kserial/src/common/commands/: file.rs  ids.rs  incremental.rs  mod.rs  string_packet.rs
kserial/src/common/commands/file/: close_file.rs  mod.rs  open_file.rs  write_file.rs
kserial/src/server/: command_handlers.rs  copy_rw.rs  mod.rs  packet_error.rs  read_from.rs  serial_handler.rs  serial_stream.rs
kserial/src/server/handlers/: file.rs  mod.rs
kvmm/: Cargo.toml
kvmm/src/: lib.rs
kvmm/src/pagetable/: entry.rs  mod.rs  page_layout.rs
kvmm/src/phys/: frame_mapper.rs  mod.rs
kvmm/src/virt/: alloc.rs  mod.rs  range.rs  virt_alloc.rs
nmm/: Cargo.toml
nmm/src/: entry_walker.rs  kernel_map.rs  lib.rs
nmm/src/arch/: mod.rs  x86_64.rs
nmm/src/arch/x86_64/: addr.rs  api.rs  conv.rs  mapper.rs  mod.rs  offset.rs  recursive.rs
nmm/src/bitmap/: allocate.rs  bitptr.rs  mod.rs  state.rs
nmm/src/bitmap/managers/: mod.rs  phys.rs  virt.rs
nmm/src/paging/: asm.rs  builder.rs  fragment.rs  frame.rs  index.rs  limine.rs  map.rs  mod.rs  page.rs  page_state.rs  table.rs
nmm/src/paging/builder/: mod.rs  recursive.rs
nmm/src/paging/primitives/: address.rs  frame.rs  mod.rs  paddr.rs  page.rs  vaddr.rs
pcibin/: Cargo.toml
pcibin/src/: lib.rs
pcibin/src/generate/: binary_alloc.rs  mod.rs  str_alloc.rs
re_analyzer/: Cargo.toml
re_analyzer/src/: lib.rs  main.rs  meta.rs  resolve.rs
src/: lib.rs  main.rs  packet_handler.rs  port_reader.rs
tools/: parse_heap_raw.py  process_raw_serial_dump.py  rust_project.py  smart_check.py  sort_block_output.py  update_nightly.py
trampoline/: Cargo.toml  build.rs  link.ld
trampoline/.cargo/: config.toml
trampoline/src/: arch.rs  idt.rs  lib.rs  main.rs  mem.rs  requests.rs  serial.rs
trampoline/src/mem/: alloc.rs  kernel.rs  kernel_map.rs  mod.rs
trampoline/src/mem/map/: cfg.rs  mod.rs
