[package]
name = "novos"
version = "0.1.0"
edition = "2021"


[workspace]
members = [ "kbuild","kernel", "kproc", "kserial"]

[build-dependencies]
kernel = {path = "kernel", artifact = "bin", target = "x86_64-unknown-none"}
kbuild = {path = "kbuild"}

[dependencies]
backtrace = "0.3.74"
ctrlc = "3.4.5"
lazy_static = "1.5.0"
regex = "1.10.6"
kserial = { path = "kserial" , features = ["server"]}
kbuild = {path = "kbuild"}
jzon = "0.12.4"
ovmf-prebuilt = "0.2.1"

