[package]
name = "novos"
version = "0.1.0"
edition = "2021"
default-run = "boot"


[workspace]
members = [ "cake", "kalloc", "kbuild","kernel", "kproc", "krun", "kserial", "kserial/kserial_derive", "kelp"]

[build-dependencies]
kernel = {path = "kernel", artifact = "bin", target = "x86_64-unknown-none"}
kbuild = {path = "kbuild"}

[dependencies]
backtrace = "0.3.74"
ctrlc = "3.4.5"
lazy_static = "1.5.0"
regex = "1.10.6"
kserial = { path = "kserial" }
kbuild = {path = "kbuild"}
jzon = "0.12.4"
ovmf-prebuilt = "0.2.1"
krun = { path = "krun" }

[workspace.metadata.smartcheck]
kernel = "x86_64-unknown-none"