[package]
name = "cake"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5.0"
log = "0.4.28"
spin = "0.10.0"
raw-cpuid = "11.6.0"
lock_api = { version = "0.4.14", default-features = false }

# This is so that `rust-analyzer` doesn't crash and burn
[target.'cfg(unix)'.dev-dependencies]
ctor = "0.4.1"
env_logger = "0.11.7"

[features]
std = []

[lints]
workspace = true
