[package]
name = "kserial"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0.7", default-features = false }
spin = "0.9.8"
bytemuck = { version = "1.22.0", features = ["derive"] }
pastey = "0.1.0"

[features]
default = ["client", "server"]
std = []
client = []
server = ["std", "client"]

[dev-dependencies]
ctor = "0.4.1"
env_logger = "0.11.7"
log = "0.4.27"

