[package]
name = "kserial"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0.7", default-features = false }
spin = "0.9.8"
bytemuck = { version = "1.22.0", features = ["derive"] }
pastey = "0.1.0"
bitflags = { version = "2.9.0", features = ["bytemuck"] }
lazy_static = "1.5.0"

[features]
default = ["std"]
std = []

# INFO: THIS CFG DIRECTIVE IS *VERY IMPORTANT* FOR THE BUILD SYSTEM
# If the `cfg(unix)` directive is not present, cargo will insist that you are trying to build this for #![no_std].
# This will cause rust-analyzer to do *really* weird things, and make you spend 3 hours trying to figure out why
[target.'cfg(unix)'.dev-dependencies]
ctor = "0.4.1"
log = { version = "0.4" }
env_logger = "0.11.7"
