[package]
name = "nmm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
x86_64 = { version = "0.15.4", optional = true }
cake = {path = "../cake"}
thiserror = { version = "2.0.3", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }

[lints]
workspace = true

[features]
# yes this is me opening the door for more architectures in the future.. don't get your hopes up though as this is more.. distant future
default = ["x86_64"]
x86_64 = ["dep:x86_64"]
