[package]
name = "trampoline"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5.0"
log = "0.4.27"
spin = "0.10.0"
uart_16550 = "0.3.1"
x86_64 = "0.15.2"
kvmm = {path = "../kvmm"}

[[bin]]
name = "trampoline"
test = false
bench = false

[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
# Include all debug info
debug = true
opt-level = 0
