[package]
name = "trampoline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trampoline"
test = false
bench = false

[dependencies]
limine = "0.5.0"
cake = {path = "../cake"}
uart_16550 = "0.3.1"
kvmm = {path = "../kvmm"}
x86_64 = "0.15.2"
# On this episode of "Incredibly weird quirks with rust-analyzer": This silents the missing function warnings for configured out
# x86_64 instructions module. I don't know why, as the crate itself doesn't really do anything interesting with configuring stuff out.
pic8259 = "0.11.0"


[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
# Include all debug info
debug = true
opt-level = 0

[profile.test]
panic = "abort"
debug = true
opt-level = 0